[#6892] alignment issue on ticket display id in details page

--- a/public/src/page/tkt_details/tkt_details.scss
+++ b/public/src/page/tkt_details/tkt_details.scss
@@ -2881,7 +2881,7 @@ $collision_delay: 1s;
 }
 
 .ticket_details .sticky_left {
-	width: 150px;
+	width: 220px;
 	display: inline-block;
 	.ticket-notifications {
 		position: static;
